--- a/app/views/todo_items/edit.html.erb
+++ b/app/views/todo_items/edit.html.erb
@@ -1,18 +1,5 @@
+<h1><%= @todo_list.title %> - Editing Todo List Item</h1>
+
 <%= form_for [@todo_list, @todo_item] do |f| %>
-  <% if @todo_item.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@todo_item.errors.count, "error") %> prohibited this todo item from being saved:</h2>
-
-      <ul>
-      <% @todo_item.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-	<%= f.label :content %>
-	<%= f.text_field :content %>
-
-	<%= f.submit "Save" %>
+  <%= render partial: "form", locals: { f: f } %>
 <% end %>
