--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,12 @@
 		<h1><%= link_to "MOATDL", root_path %></h1>
 		<ul>
 			<li><%= link_to "Todo Lists", todo_lists_path %></li>
-			<li><%= link_to "Sign Up", new_user_path %></li>
+			<% if logged_in? %>
+				<li><%= link_to "Log Out", logout_path, method: :delete %></li>
+			<% else %>
+				<li><%= link_to "Log In", new_user_session_path %></li>
+				<li><%= link_to "Sign Up", new_user_path %></li>
+			<% end %>
 		</ul>
 		<br class="clear">
 	</div>
